<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="name">Name: </string>
    <string name="surname">Surname: </string>
    <string name="county">County: </string>
    <string name="birthday">Birthday</string>
    <string name="email">Email: </string>
    <string name="phone">Phone: </string>
    <string name="add">Add</string>
    <string name="reset_action">Reset</string>
    <string name="validate">Validate</string>
    <string name="delete_phone">Delete number</string>
    <string name="pick_time_btn">Choose date</string>
    <string name="number">0</string>
    <string name="city_of_birth">City</string>
    <string name="preference_file_key">shared_file</string>
    <string name="first_app_data">first_app_data</string>

</resources>